add storage modules

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
+# Application
+APP_NAME=arvigo-backend
 PORT=8080
+
+# Database
 DB_USER=root
 DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=your-database-name
+
+# Storage
+STORAGE_BUCKET_NAME=arvigo-bucket
+STORAGE_BUCKET_FOLDER=images
+
+# Secret
 JWT_SECRET=my-secret-key
 SALT_SECRET=s3cr3ts444lt
