--- a/deployment.yaml
+++ b/deployment.yaml
@@ -36,6 +36,10 @@ spec:
         ports:
         - containerPort: 8080
           protocol: TCP
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "500Mi"
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
