--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ STORAGE_BUCKET_IMAGE_FOLDER=images
 # Secret
 JWT_SECRET=$JWT_SECRET
 SALT_SECRET=$SALT_SECRET
+X_API_KEY_SECRET=4a150010-bac7-46e7-8b8b-594f47b0015c
