--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,10 @@ DB_PORT=3306
 DB_NAME=$DB_NAME
 
 # Storage
-STORAGE_BUCKET_NAME=arvigo-bucket
+STORAGE_BUCKET_NAME=$STORAGE_BUCKET_NAME
 STORAGE_BUCKET_IMAGE_FOLDER=images
 
 # Secret
 JWT_SECRET=$JWT_SECRET
 SALT_SECRET=$SALT_SECRET
-X_API_KEY_SECRET=4a150010-bac7-46e7-8b8b-594f47b0015c
+X_API_KEY_SECRET=$X_API_KEY_SECRET
