--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,43 +1,57 @@
 steps:
-- id: make-env-file
-  name: 'ubuntu'
-  args: ['cp', '.env.example', '.env']
+  - id: make-env-file
+    name: "ubuntu"
+    args: ["cp", ".env.example", ".env"]
 
-- id: change-variable-env
-  name: 'gcr.io/$PROJECT_ID/envsubst'
-  env:
-    - 'DB_PASSWORD=${_DB_PASSWORD}'
-    - 'DB_HOST=${_DB_HOST}'
-    - 'DB_NAME=${_DB_NAME}'
-    - 'JWT_SECRET=${_JWT_SECRET}'
-    - 'SALT_SECRET=${_SALT_SECRET}'
-  args: ['.env']
+  - id: copy-gcp-credential
+    name: "google/cloud-sdk"
+    args: ["gcloud", "storage", "cp", "${_GCLOUD_STORAGE}", "."]
+    timeout: 900s
 
-- id: Build-docker
-  name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'asia.gcr.io/$PROJECT_ID/production/arvigo-backend:$SHORT_SHA', '.']
-  timeout: 900s
+  - id: change-variable-env
+    name: "gcr.io/$PROJECT_ID/envsubst"
+    env:
+      - "DB_PASSWORD=${_DB_PASSWORD}"
+      - "DB_HOST=${_DB_HOST}"
+      - "DB_NAME=${_DB_NAME}"
+      - "JWT_SECRET=${_JWT_SECRET}"
+      - "SALT_SECRET=${_SALT_SECRET}"
+      - "X_API_KEY_SECRET=${_X_API_KEY_SECRET}"
+      - "STORAGE_BUCKET_NAME=${_STORAGE_BUCKET_NAME}"
+    args: [".env"]
 
-- id: Push-docker
-  name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'asia.gcr.io/$PROJECT_ID/production/arvigo-backend:$SHORT_SHA']
-  timeout: 900s
+  - id: Build-docker
+    name: "gcr.io/cloud-builders/docker"
+    args:
+      [
+        "build",
+        "-t",
+        "asia.gcr.io/$PROJECT_ID/production/arvigo-backend:$SHORT_SHA",
+        ".",
+      ]
+    timeout: 900s
 
-- id: envSubst-for-deployment.yml
-  name: 'gcr.io/$PROJECT_ID/envsubst'
-  env:
-    - 'SHORT_SHA=$SHORT_SHA'
-    - 'PROJECT_ID=$PROJECT_ID'
-  args: ['deployment.yaml']
+  - id: Push-docker
+    name: "gcr.io/cloud-builders/docker"
+    args:
+      ["push", "asia.gcr.io/$PROJECT_ID/production/arvigo-backend:$SHORT_SHA"]
+    timeout: 900s
 
-- id: Deploy-to-GKE
-  name: "gcr.io/cloud-builders/gke-deploy" 
-  args:
-  - run
-  - --filename=deployment.yaml
-  - --cluster=arvigo-cluster
-  - --location=asia-southeast2
-  timeout: 900s
+  - id: envSubst-for-deployment.yml
+    name: "gcr.io/$PROJECT_ID/envsubst"
+    env:
+      - "SHORT_SHA=$SHORT_SHA"
+      - "PROJECT_ID=$PROJECT_ID"
+    args: ["deployment.yaml"]
+
+  - id: Deploy-to-GKE
+    name: "gcr.io/cloud-builders/gke-deploy"
+    args:
+      - run
+      - --filename=deployment.yaml
+      - --cluster=arvigo-cluster
+      - --location=asia-southeast2
+    timeout: 900s
 
 # Global Timeout
-timeout: '3600s'
+timeout: "3600s"
