move secret key

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ STORAGE_BUCKET_IMAGE_FOLDER=images
 JWT_SECRET=$JWT_SECRET
 SALT_SECRET=$SALT_SECRET
 X_API_KEY_SECRET=$X_API_KEY_SECRET
+X_API_KEY_SECRET_ML=$X_API_KEY_SECRET_ML
