--- a/deployment.yaml
+++ b/deployment.yaml
@@ -38,8 +38,8 @@ spec:
           protocol: TCP
         resources:
           requests:
-            cpu: "250m"
-            memory: "500Mi"
+            cpu: 250m
+            memory: 500Mi
         livenessProbe:
           failureThreshold: 10
           httpGet:
@@ -60,6 +60,27 @@ spec:
           periodSeconds: 30
           successThreshold: 1
           timeoutSeconds: 30
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: arvigo-backend-cronjob
+spec:
+  schedule: "0 * * * *"
+  concurrencyPolicy: Allow
+  startingDeadlineSeconds: 100
+  suspend: false
+  successfulJobsHistoryLimit: 3
+  failedJobsHistoryLimit: 1
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          containers:
+            - name: arvigo-backend-container
+            image: asia.gcr.io/$PROJECT_ID/production/arvigo-backend:$SHORT_SHA
+            command: ["curl", "--request", "POST", "http://localhost:8080/v1/cron-job/subscription"]
+          restartPolicy: OnFailure
 ---
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
