add env example

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,10 @@ JWT_SECRET=$JWT_SECRET
 SALT_SECRET=$SALT_SECRET
 X_API_KEY_SECRET=$X_API_KEY_SECRET
 X_API_KEY_SECRET_ML=$X_API_KEY_SECRET_ML
+
+# Cache
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DB=0
