--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,6 +19,12 @@ steps:
     - 'X_API_KEY_SECRET=${_X_API_KEY_SECRET}'
     - 'X_API_KEY_SECRET_ML=${_X_API_KEY_SECRET_ML}'
     - 'STORAGE_BUCKET_NAME=${_STORAGE_BUCKET_NAME}'
+    - 'REDIS_HOST=${_REDIS_HOST}'
+    - 'REDIS_PORT=${_REDIS_PORT}'
+    - 'REDIS_USERNAME=${_REDIS_USERNAME}'
+    - 'REDIS_PASSWORD=${_REDIS_PASSWORD}'
+    - 'REDIS_DB=${_REDIS_DB}'
+
   args: ['.env']
 
 - id: Build-docker
